initial commit with db details

--- a/.env.dev
+++ b/.env.dev
@@ -1,131 +1,105 @@
 # ============================================================================
-# ENVIRONMENT VARIABLES TEMPLATE
+# DEVELOPMENT ENVIRONMENT
 # ============================================================================
-# Copy this file and rename based on your environment:
-#   - .env.local  -> Local development
-#   - .env.dev    -> Development (GCP)
-#   - .env.qa     -> QA (GCP)
-#   - .env.prod   -> Production (GCP)
-#
-# For local development, copy .env.local to .env
-# ============================================================================
+# This file contains configuration for the DEV environment
 
 # ─────────────────────────────────────────────────────────────────────────────
-# ENVIRONMENT
+# Environment
 # ─────────────────────────────────────────────────────────────────────────────
-NODE_ENV=                    # development | qa | production
-DEBUG_MODE=                  # true | false
-
-# ─────────────────────────────────────────────────────────────────────────────
-# POSTGRESQL DATABASE
-# ─────────────────────────────────────────────────────────────────────────────
-# Individual connection parameters (for GCP Secret Manager injection)
-POSTGRES_HOST=               # Database host IP or hostname
-POSTGRES_PORT=               # Database port (default: 5432)
-POSTGRES_DB=                 # Database name
-POSTGRES_USER=               # Database user
-POSTGRES_PASSWORD=           # Database password
-
-# Java Services (JDBC format)
-JDBC_DATABASE_URL=           # jdbc:postgresql://HOST:PORT/DATABASE
-
-# Node.js Services (connection string)
-NODE_DATABASE_URL=           # postgresql://USER:PASSWORD@HOST:PORT/DATABASE
-
-# Prisma ORM
-DATABASE_URL=                # postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public
+NODE_ENV=development
+DEBUG_MODE=true
 
 # ─────────────────────────────────────────────────────────────────────────────
-# MONGODB
+# PostgreSQL Database
 # ─────────────────────────────────────────────────────────────────────────────
 # Individual connection parameters
-MONGO_HOST=                  # MongoDB host
-MONGO_PORT=                  # MongoDB port (default: 27017)
-MONGO_DB=                    # Database name
-MONGO_USER=                  # MongoDB user (optional for local)
-MONGO_PASSWORD=              # MongoDB password (optional for local)
-MONGO_CLUSTER=               # MongoDB Atlas cluster name (for Atlas)
+POSTGRES_HOST=postgres.mycompany.internal
+POSTGRES_PORT=5432
+POSTGRES_DB=nma_production_db
+POSTGRES_USER=nma_app_user
+POSTGRES_PASSWORD=Str0ngP@ssw0rd!
 
-# Connection URI
-MONGODB_URI=                 # Full MongoDB connection string
-                             # Local: mongodb://localhost:27017/commerce_ai
-                             # Atlas: mongodb+srv://USER:PASS@CLUSTER/DATABASE
+# Java Services (JDBC format)
+JDBC_DATABASE_URL=jdbc:postgresql://postgres.mycompany.internal:5432/nma_production_db
+DATABASE_USER=nma_app_user
+DATABASE_PASSWORD=Str0ngP@ssw0rd!
 
-# ─────────────────────────────────────────────────────────────────────────────
-# REDIS
-# ─────────────────────────────────────────────────────────────────────────────
-REDIS_HOST=                  # Redis host
-REDIS_PORT=                  # Redis port (default: 6379)
-REDIS_PASSWORD=              # Redis password (optional)
+# Node.js Services
+NODE_DATABASE_URL=postgresql://nma_app_user:Str0ngP@ssw0rd!@postgres.mycompany.internal:5432/nma_production_db
 
-# Connection URL
-REDIS_URL=                   # redis://HOST:PORT or redis://:PASSWORD@HOST:PORT
+# Prisma ORM
+DATABASE_URL=postgresql://nma_app_user:Str0ngP@ssw0rd!@postgres.mycompany.internal:5432/nma_production_db?schema=public
 
 # ─────────────────────────────────────────────────────────────────────────────
-# JWT AUTHENTICATION
+# MongoDB
 # ─────────────────────────────────────────────────────────────────────────────
-JWT_SECRET=                  # Strong secret key for JWT signing
-JWT_EXPIRES_IN=              # Token expiry (e.g., 7d, 24h, 3600)
+# Individual connection parameters
+MONGO_HOST=mongo.mycompany.internal
+MONGO_PORT=27017
+MONGO_DB=commerce_ai
+MONGO_USER=nma_mongo_user
+MONGO_PASSWORD=Str0ngM0ngoP@ss!
+
+# Connection URI (with authentication)
+MONGODB_URI=mongodb://nma_mongo_user:Str0ngM0ngoP@ss!@mongo.mycompany.internal:27017/commerce_ai?authSource=admin
 
 # ─────────────────────────────────────────────────────────────────────────────
-# SERVER PORTS
+# Redis
 # ─────────────────────────────────────────────────────────────────────────────
-PORT=                        # Default port (Cloud Run uses this)
-BFF_PORT=                    # BFF service port (default: 3000)
-ORCHESTRATOR_PORT=           # Orchestrator service port (default: 3001)
-TOOL_SERVER_PORT=            # Tool server port (default: 8081)
-CHAT_UI_PORT=                # Chat UI port (default: 5174)
-ADMIN_UI_PORT=               # Admin UI port (default: 5173)
+REDIS_HOST=redis.mycompany.internal
+REDIS_PORT=6379
+REDIS_PASSWORD=Str0ngP@ssw0rd!
+
+# Connection URL (with authentication)
+REDIS_URL=redis://:Str0ngP@ssw0rd!@redis.mycompany.internal:6379
 
 # ─────────────────────────────────────────────────────────────────────────────
-# INTERNAL SERVICE URLS
+# JWT Authentication
 # ─────────────────────────────────────────────────────────────────────────────
-BFF_URL=                     # BFF service URL
-BFF_SERVICE_URL=             # BFF service URL (for GCP)
-ORCHESTRATOR_URL=            # Orchestrator service URL
-ORCHESTRATOR_SERVICE_URL=    # Orchestrator service URL (for GCP)
-MCP_TOOL_SERVER_URL=         # Tool server URL
-TOOL_SERVER_URL=             # Tool server URL (for GCP)
+JWT_SECRET=commerce-ai-dev-secret-key-change-in-production
+JWT_EXPIRES_IN=7d
 
 # ─────────────────────────────────────────────────────────────────────────────
-# LLM PROVIDER API KEYS
+# Server Ports
 # ─────────────────────────────────────────────────────────────────────────────
-OPENAI_API_KEY=              # OpenAI API key
-ANTHROPIC_API_KEY=           # Anthropic API key
-GOOGLE_API_KEY=              # Google API key
+PORT=3000
+BFF_PORT=3000
+ORCHESTRATOR_PORT=3001
+TOOL_SERVER_PORT=8081
 
 # ─────────────────────────────────────────────────────────────────────────────
-# FRONTEND CONFIGURATION (VITE)
+# Internal Service URLs
 # ─────────────────────────────────────────────────────────────────────────────
-VITE_DEBUG_MODE=             # true | false
-VITE_API_BASE_URL=           # API base URL for frontend
-VITE_ORCHESTRATOR_URL=       # Orchestrator URL for frontend
+# Update these with your actual deployment URLs
+MCP_TOOL_SERVER_URL=http://localhost:8081
+ORCHESTRATOR_URL=http://localhost:3001
+BFF_URL=http://localhost:3000
 
 # ─────────────────────────────────────────────────────────────────────────────
-# OTP CONFIGURATION
+# LLM Provider API Keys
 # ─────────────────────────────────────────────────────────────────────────────
-OTP_EXPIRES_IN_SEC=          # OTP expiry in seconds (default: 120)
-OTP_RESEND_AVAILABLE_IN_SEC= # Resend cooldown in seconds (default: 30)
-ACCESS_TOKEN_EXPIRES_IN_SEC= # Access token expiry (default: 3600)
-REFRESH_TOKEN_EXPIRES_IN_SEC=# Refresh token expiry (default: 2592000)
-DUMMY_OTP=                   # Dummy OTP for testing (remove in prod!)
+OPENAI_API_KEY=${OPENAI_API_KEY}
+ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+GOOGLE_API_KEY=${GOOGLE_API_KEY}
 
 # ─────────────────────────────────────────────────────────────────────────────
-# GCP CONFIGURATION
+# Frontend Configuration
 # ─────────────────────────────────────────────────────────────────────────────
-GCP_PROJECT_ID=              # GCP project ID
-GCP_REGION=                  # GCP region (default: us-central1)
-CLOUD_SQL_CONNECTION_NAME=   # Cloud SQL instance connection name
+VITE_DEBUG_MODE=true
+VITE_API_BASE_URL=http://localhost:5173
+VITE_ORCHESTRATOR_URL=http://localhost:5173
 
 # ─────────────────────────────────────────────────────────────────────────────
-# LOGGING & MONITORING
+# OTP Configuration
 # ─────────────────────────────────────────────────────────────────────────────
-LOG_LEVEL=                   # debug | info | warn | error
-ENABLE_CLOUD_LOGGING=        # true | false
+OTP_EXPIRES_IN_SEC=120
+OTP_RESEND_AVAILABLE_IN_SEC=30
+ACCESS_TOKEN_EXPIRES_IN_SEC=3600
+REFRESH_TOKEN_EXPIRES_IN_SEC=2592000
+DUMMY_OTP=1234
 
 # ─────────────────────────────────────────────────────────────────────────────
-# SECURITY (PRODUCTION)
+# Logging & Monitoring
 # ─────────────────────────────────────────────────────────────────────────────
-CORS_ORIGINS=                # Allowed CORS origins (comma-separated)
-RATE_LIMIT_REQUESTS=         # Max requests per window
-RATE_LIMIT_WINDOW_MS=        # Rate limit window in ms
+LOG_LEVEL=debug
+ENABLE_CLOUD_LOGGING=false
