--- a/.env.prod
+++ b/.env.prod
@@ -1,131 +1,118 @@
 # ============================================================================
-# ENVIRONMENT VARIABLES TEMPLATE
+# PRODUCTION ENVIRONMENT (GCP)
 # ============================================================================
-# Copy this file and rename based on your environment:
-#   - .env.local  -> Local development
-#   - .env.dev    -> Development (GCP)
-#   - .env.qa     -> QA (GCP)
-#   - .env.prod   -> Production (GCP)
-#
-# For local development, copy .env.local to .env
-# ============================================================================
+# This file contains configuration for the PRODUCTION environment on GCP
+# All sensitive values should be stored in GCP Secret Manager
 
 # ─────────────────────────────────────────────────────────────────────────────
-# ENVIRONMENT
+# Environment
 # ─────────────────────────────────────────────────────────────────────────────
-NODE_ENV=                    # development | qa | production
-DEBUG_MODE=                  # true | false
+NODE_ENV=production
+DEBUG_MODE=false
 
 # ─────────────────────────────────────────────────────────────────────────────
-# POSTGRESQL DATABASE
+# PostgreSQL Database (Cloud SQL)
 # ─────────────────────────────────────────────────────────────────────────────
-# Individual connection parameters (for GCP Secret Manager injection)
-POSTGRES_HOST=               # Database host IP or hostname
-POSTGRES_PORT=               # Database port (default: 5432)
-POSTGRES_DB=                 # Database name
-POSTGRES_USER=               # Database user
-POSTGRES_PASSWORD=           # Database password
-
 # Java Services (JDBC format)
-JDBC_DATABASE_URL=           # jdbc:postgresql://HOST:PORT/DATABASE
+JDBC_DATABASE_URL=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+DATABASE_USER=${POSTGRES_USER}
+DATABASE_PASSWORD=${POSTGRES_PASSWORD}
 
-# Node.js Services (connection string)
-NODE_DATABASE_URL=           # postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+# Node.js Services
+NODE_DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 # Prisma ORM
-DATABASE_URL=                # postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
+
+# Cloud SQL Connection
+# POSTGRES_HOST=<CLOUD_SQL_PRIVATE_IP>
+# POSTGRES_PORT=5432
+# POSTGRES_DB=commerce_ai_prod
+# POSTGRES_USER=<service-account>
+# POSTGRES_PASSWORD=<from-secret-manager>
 
 # ─────────────────────────────────────────────────────────────────────────────
-# MONGODB
+# MongoDB (MongoDB Atlas recommended for production)
 # ─────────────────────────────────────────────────────────────────────────────
-# Individual connection parameters
-MONGO_HOST=                  # MongoDB host
-MONGO_PORT=                  # MongoDB port (default: 27017)
-MONGO_DB=                    # Database name
-MONGO_USER=                  # MongoDB user (optional for local)
-MONGO_PASSWORD=              # MongoDB password (optional for local)
-MONGO_CLUSTER=               # MongoDB Atlas cluster name (for Atlas)
+# For MongoDB Atlas with replica set
+MONGODB_URI=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_CLUSTER}/${MONGO_DB}?retryWrites=true&w=majority
 
-# Connection URI
-MONGODB_URI=                 # Full MongoDB connection string
-                             # Local: mongodb://localhost:27017/commerce_ai
-                             # Atlas: mongodb+srv://USER:PASS@CLUSTER/DATABASE
+# MongoDB Connection Details
+# MONGO_CLUSTER=<cluster-name>.mongodb.net
+# MONGO_DB=commerce_ai_prod
+# MONGO_USER=<mongo-user>
+# MONGO_PASSWORD=<from-secret-manager>
 
 # ─────────────────────────────────────────────────────────────────────────────
-# REDIS
+# Redis (Memorystore recommended for production)
 # ─────────────────────────────────────────────────────────────────────────────
-REDIS_HOST=                  # Redis host
-REDIS_PORT=                  # Redis port (default: 6379)
-REDIS_PASSWORD=              # Redis password (optional)
+REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}
 
-# Connection URL
-REDIS_URL=                   # redis://HOST:PORT or redis://:PASSWORD@HOST:PORT
-
-# ─────────────────────────────────────────────────────────────────────────────
-# JWT AUTHENTICATION
-# ─────────────────────────────────────────────────────────────────────────────
-JWT_SECRET=                  # Strong secret key for JWT signing
-JWT_EXPIRES_IN=              # Token expiry (e.g., 7d, 24h, 3600)
+# Redis Connection Details
+# REDIS_HOST=<memorystore-private-ip>
+# REDIS_PORT=6379
 
 # ─────────────────────────────────────────────────────────────────────────────
-# SERVER PORTS
+# JWT Authentication (use strong secret from Secret Manager)
 # ─────────────────────────────────────────────────────────────────────────────
-PORT=                        # Default port (Cloud Run uses this)
-BFF_PORT=                    # BFF service port (default: 3000)
-ORCHESTRATOR_PORT=           # Orchestrator service port (default: 3001)
-TOOL_SERVER_PORT=            # Tool server port (default: 8081)
-CHAT_UI_PORT=                # Chat UI port (default: 5174)
-ADMIN_UI_PORT=               # Admin UI port (default: 5173)
+JWT_SECRET=${JWT_SECRET}
+JWT_EXPIRES_IN=1d
 
 # ─────────────────────────────────────────────────────────────────────────────
-# INTERNAL SERVICE URLS
+# Server Ports (Cloud Run uses PORT env var)
 # ─────────────────────────────────────────────────────────────────────────────
-BFF_URL=                     # BFF service URL
-BFF_SERVICE_URL=             # BFF service URL (for GCP)
-ORCHESTRATOR_URL=            # Orchestrator service URL
-ORCHESTRATOR_SERVICE_URL=    # Orchestrator service URL (for GCP)
-MCP_TOOL_SERVER_URL=         # Tool server URL
-TOOL_SERVER_URL=             # Tool server URL (for GCP)
+PORT=${PORT:-8080}
 
 # ─────────────────────────────────────────────────────────────────────────────
-# LLM PROVIDER API KEYS
+# Internal Service URLs (Cloud Run service URLs)
 # ─────────────────────────────────────────────────────────────────────────────
-OPENAI_API_KEY=              # OpenAI API key
-ANTHROPIC_API_KEY=           # Anthropic API key
-GOOGLE_API_KEY=              # Google API key
+MCP_TOOL_SERVER_URL=${TOOL_SERVER_URL}
+ORCHESTRATOR_URL=${ORCHESTRATOR_SERVICE_URL}
+BFF_URL=${BFF_SERVICE_URL}
+
+# Cloud Run Service URLs
+# TOOL_SERVER_URL=https://tool-server-prod-xxxxx-uc.a.run.app
+# ORCHESTRATOR_SERVICE_URL=https://orchestrator-prod-xxxxx-uc.a.run.app
+# BFF_SERVICE_URL=https://bff-prod-xxxxx-uc.a.run.app
 
 # ─────────────────────────────────────────────────────────────────────────────
-# FRONTEND CONFIGURATION (VITE)
+# LLM Provider API Keys (MUST be from Secret Manager)
 # ─────────────────────────────────────────────────────────────────────────────
-VITE_DEBUG_MODE=             # true | false
-VITE_API_BASE_URL=           # API base URL for frontend
-VITE_ORCHESTRATOR_URL=       # Orchestrator URL for frontend
+OPENAI_API_KEY=${OPENAI_API_KEY}
+ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+GOOGLE_API_KEY=${GOOGLE_API_KEY}
 
 # ─────────────────────────────────────────────────────────────────────────────
-# OTP CONFIGURATION
+# Frontend Configuration
 # ─────────────────────────────────────────────────────────────────────────────
-OTP_EXPIRES_IN_SEC=          # OTP expiry in seconds (default: 120)
-OTP_RESEND_AVAILABLE_IN_SEC= # Resend cooldown in seconds (default: 30)
-ACCESS_TOKEN_EXPIRES_IN_SEC= # Access token expiry (default: 3600)
-REFRESH_TOKEN_EXPIRES_IN_SEC=# Refresh token expiry (default: 2592000)
-DUMMY_OTP=                   # Dummy OTP for testing (remove in prod!)
+VITE_DEBUG_MODE=false
+VITE_API_BASE_URL=${BFF_SERVICE_URL}
+VITE_ORCHESTRATOR_URL=${ORCHESTRATOR_SERVICE_URL}
 
 # ─────────────────────────────────────────────────────────────────────────────
-# GCP CONFIGURATION
+# OTP Configuration (production settings)
 # ─────────────────────────────────────────────────────────────────────────────
-GCP_PROJECT_ID=              # GCP project ID
-GCP_REGION=                  # GCP region (default: us-central1)
-CLOUD_SQL_CONNECTION_NAME=   # Cloud SQL instance connection name
+OTP_EXPIRES_IN_SEC=120
+OTP_RESEND_AVAILABLE_IN_SEC=30
+ACCESS_TOKEN_EXPIRES_IN_SEC=3600
+REFRESH_TOKEN_EXPIRES_IN_SEC=2592000
+# NO DUMMY_OTP in production
 
 # ─────────────────────────────────────────────────────────────────────────────
-# LOGGING & MONITORING
+# GCP Specific Configuration
 # ─────────────────────────────────────────────────────────────────────────────
-LOG_LEVEL=                   # debug | info | warn | error
-ENABLE_CLOUD_LOGGING=        # true | false
+GCP_PROJECT_ID=${GCP_PROJECT_ID}
+GCP_REGION=${GCP_REGION:-us-central1}
 
 # ─────────────────────────────────────────────────────────────────────────────
-# SECURITY (PRODUCTION)
+# Logging & Monitoring
 # ─────────────────────────────────────────────────────────────────────────────
-CORS_ORIGINS=                # Allowed CORS origins (comma-separated)
-RATE_LIMIT_REQUESTS=         # Max requests per window
-RATE_LIMIT_WINDOW_MS=        # Rate limit window in ms
+LOG_LEVEL=warn
+ENABLE_CLOUD_LOGGING=true
+
+# ─────────────────────────────────────────────────────────────────────────────
+# Security Settings
+# ─────────────────────────────────────────────────────────────────────────────
+CORS_ORIGINS=${ALLOWED_ORIGINS}
+RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_WINDOW_MS=60000
